se corrigieron errores del eslint

--- a/my-app/src/components/header.css
+++ b/my-app/src/components/header.css
@@ -1,7 +1,7 @@
 html {
   font-family: "Montserrat";
   margin: 1em 20%;
-  background-color: #fafafa;
+  /* background-color: #F3F4F6;  */
 }
 header {
   position: fixed;
