--- a/my-app/src/components/tables.css
+++ b/my-app/src/components/tables.css
@@ -1,3 +1,7 @@
+html {
+    font-family: "Montserrat";
+    background-color: #F3F4F6; 
+  }
 section {
     display: flex;
     justify-content: center;
