--- a/my-app/src/components/header.css
+++ b/my-app/src/components/header.css
@@ -13,10 +13,10 @@ header {
 }
 .logoheader {
   width: 50px;
-  height: auto;
+  height: 53px;
   float: left;
-  font-size: 3em;
-  margin: 0;
+  margin-top: 8px;
+  /* font-size: 3em; */
   padding: 0.4em;
   text-decoration: none;
   color: #333;
