--- a/my-app/src/components/productsList.css
+++ b/my-app/src/components/productsList.css
@@ -10,6 +10,10 @@
   /* body {
       background: #E5E5E5;
   } */
+
+  .products-section {
+    margin-top: 105px;
+  }
   
   .menu-section-breakfast {
     display: grid;
@@ -19,70 +23,3 @@
     height: auto;
     justify-content: flex-start;
   }
-  
-  .container-breakfast {
-    width: 340px;
-    height: 300px;
-    background: #ffffff;
-    box-shadow: 15px 19px 28px rgba(0, 0, 0, 0.06);
-    border-radius: 30px;
-  }
-  .content-breakfast {
-    width: 310px;
-    margin: 0 auto;
-    padding-top: 15px;
-  }
-  .visual-breakfast {
-    display: flex;
-    align-items: center;
-    align-content: center;
-  }
-  .breakfast-figure {
-    display: flex;
-    justify-content: center;
-  }
-  .breakfast-figure img {
-    width: 170px;
-  }
-  .breakfast-figure .breakfast-price {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    width: 99px;
-    height: 44px;
-    left: 673px;
-    top: 338px;
-    background: #f6f7f9;
-    border-radius: 15px;
-    font-size: 1.8rem;
-    font-weight: 700;
-  }
-  
-  .breakfast-details h3 {
-    font-size: 2rem;
-    margin-top: 0px;
-    margin-bottom: 18px;
-    text-align: center;
-  }
-  .breakfast-details h3 p {
-    margin-top: 1px;
-  }
-  .breakfast-details p {
-    font-size: 1.3rem;
-  }
-  
-  menu-buttons-container button {
-    font-size: 2rem;
-    border: none;
-    width: 150px;
-    height: 30px;
-    border-radius: 15px;
-    color: white;
-    font-family: "Montserrat", sans-serif;
-    font-weight: bold;
-    background: brown;
-    width: 100%;
-    height: 50px;
-    cursor: pointer;
-  }
-  
