--- a/my-app/src/components/breakfast.css
+++ b/my-app/src/components/breakfast.css
@@ -14,7 +14,7 @@ html {
     display: grid;
     grid-template-columns: 320px 320px;
     gap: 15px;
-    width: 771px;
+    width: 670px;
     height: auto;
     justify-content: flex-start;
 }
@@ -78,7 +78,7 @@ button {
   color: white;
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
-  background: brown;
+  background: #5C1E0B;
   width: 100%;
   height: 50px;
   cursor: pointer;
