--- a/my-app/src/components/productsList.css
+++ b/my-app/src/components/productsList.css
@@ -17,6 +17,7 @@
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
     justify-items: baseline; /*lo justificó todo hacia la izquierda*/
+    margin-left: 30px;
   }
   .menu-section { /*PROBANDO GRIDS*/
     grid-column: 1;
