cambiando radio buttons por checkbox

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -9,3 +9,7 @@ font-size: 62.5%;
 font-family: 'Montserrat', sans-serif;
 margin: 0;
 }
+
+.font-link {
+    font-family: 'Montserrat', sans-serif;
+  }
